--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 stages: 
   - hello
   - restful
+  - restful-32
 
 jobs:
   include:
@@ -24,3 +25,13 @@ jobs:
         - docker ps
         - curl http://localhost:8002/v1/statusType -v
         - docker images
+        
+    - stage: restful-32
+      name: "RESTful on Harbour 3.2"
+      allow_failures: 
+        script:
+          - docker build -t restful restful/
+          - docker run -d --rm -p 8002:8002 restful
+          - docker ps
+          - curl http://localhost:8002/v1/statusType -v
+          - docker images
