--- a/restful-32/Dockerfile
+++ b/restful-32/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /src
 RUN git clone --depth=1 https://gitlab.com/felixd/harbour-restful.git /src
 RUN hbmk2 -fullstatic restful.hbm
 
-FROM alpine:latest 
+FROM gcr.io/distroless/static:latest AS binary
 WORKDIR /app
 COPY --from=builder /src/wsRestFul /src/status.* ./
 CMD ["./wsRestFul"]  
